external-crates/move/crates/move-compiler/tests/move_check/parser/function_without_body.move
module 0x42::M {
    // Non-native functions must specify the function body.
    fun fn();
}
